Fixed invisible actions dropdown

--- a/view/adminhtml/web/css/layout/packages/_item-image.less
+++ b/view/adminhtml/web/css/layout/packages/_item-image.less
@@ -28,7 +28,7 @@
 
             img {
                 position: relative;
-                z-index: 10;
+                z-index: 9;
                 vertical-align: top;
                 border-radius: @grid-item__border-radius @grid-item__border-radius 0 0;
             }
